added images to page (i think lol)

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,6 +1,16 @@
 extends includes/app.pug
 
 block content
-  body != 
-    '<p>test</p>'
+  div != 
+    '<style>
+      body{ 
+        background-color: #17b563ff; 
+      }
+      p{
+        color: #ffff00;
+      }
+     </style>
+     <p>test</p>
+     <img src="static/images/logoMedium.PNG"></img>'
+
   
