changed index html

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,16 +1,7 @@
 extends includes/app.pug
 
-block content
-  div != 
-    '<style>
-      body{ 
-        background-color: #17b563ff; 
-      }
-      p{
-        color: #ffff00;
-      }
-     </style>
-     <p>test</p>
-     <img src="static/images/logoMedium.PNG"></img>'
+block content 
+   p test
+   img (href='static/images/logoMedium.PNG')
 
   
