--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -3,5 +3,8 @@ extends includes/app.pug
 block content 
    p test
    img (href='static/images/logoMedium.PNG')
+   h1 I lost a pet
+   h1 I found a pet
+   h1 Search
 
   
