made better nav and index

--- a/src/views/includes/header.pug
+++ b/src/views/includes/header.pug
@@ -7,6 +7,4 @@ header(class="header")
   +nav("pull-right")
 
   span(class="header-title")
-    a(href="/") Lokraan's Echo Chamber
-
-img(src="/static/images/0.jpg" class="header-image")
+    img(src='../static/images/logoSmall.PNG' href='/')
