--- a/src/views/includes/nav.pug
+++ b/src/views/includes/nav.pug
@@ -5,4 +5,4 @@ mixin nav(direction, hover_color)
       li(class="menu-item")
         a(class="menu-link" href="/map") Map
       li(class="menu-item")
-        a(class="menu-link" href="/search") Map
+        a(class="menu-link" href="/search") Search
