--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,8 +1,7 @@
 extends includes/app.pug
 
 block content 
-   p test
-   img (href='static/images/logoMedium.PNG')
-   h1 I lost a pet
-   h1 I found a pet
-   h1 Search
+   img(src='../static/images/logoMedium.PNG')
+   h1(href='') I lost a pet
+   h1(href='') I found a pet
+   h1(href='') Search
