--- a/static/css/header.css
+++ b/static/css/header.css
@@ -4,6 +4,7 @@
   padding-top: 25px;
   margin-bottom: 30px;
   border-bottom: 1px solid #bbbbbb;
+  background-color: #17b563ff;
 }
 
 .header nav {
