--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,7 +1,8 @@
 extends includes/app.pug
 
-block content 
-   img(src='../static/images/logoMedium.PNG')
-   h1(href='') I lost a pet
-   h1(href='') I found a pet
-   h1(href='') Search
+block content
+   center
+     h1 A better way to find pets 
+     p At Pet 'N Found, our mission is to help you locate your lost pets quickly, intuitively, and efficiently.
+     img(width= 1000 src='../static/images/pic1.jpg')
+     h1 Saving the world one life at a time
