made some minor improvements

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -4,5 +4,7 @@ block content
    center
      h1 A better way to find pets 
      p At Pet 'N Found, our mission is to help you locate your lost pets quickly, intuitively, and efficiently.
-     img(width= 1000 src='../static/images/pic1.jpg')
+
+     img(width:80% src='../static/images/pic1.jpg' class="mySlides")
      h1 Saving the world one life at a time
+     p Pet 'N Found makes it easy to 
