--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -6,5 +6,5 @@ block content
      p At Pet 'N Found, our mission is to help you locate your lost pets quickly, intuitively, and efficiently.
 
      img(width:80% src='../static/images/pic1.jpg' class="mySlides")
-     h1 Saving the world one life at a time
-     p Pet 'N Found makes it easy to 
+     h1 Providing comfort in times of need
+     p Pet 'N Found makes it easy for you to locate your pets - just 
