--- a/src/views/map.pug
+++ b/src/views/map.pug
@@ -1,4 +1,22 @@
-extends app.pug
+extends includes/app.pug
 
 block content
-  p "big map"
+   // JQuery
+   script(src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous")
+  
+   // Leaflet
+   link(rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
+      integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+      crossorigin="")
+   script(src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
+      integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
+      crossorigin="")
+
+   // Map
+   link(href='static/css/map.css' rel='stylesheet')
+   script(type='text/javascript' src='static/js/map.js')
+
+   // HTML
+   div(id='petmap')
