added search bar and report button

--- a/src/views/includes/nav.pug
+++ b/src/views/includes/nav.pug
@@ -6,3 +6,8 @@ mixin nav(direction, hover_color)
         a(class="menu-link" href="/map") Map
       li(class="menu-item")
         a(class="menu-link" href="/search") Search
+      li(class="menu-item")
+        input(type="text" placeholder="search")
+      li(class="menu-item")
+        
+        button(type="Report") Report
