made button look bettemade button look betterr

--- a/src/views/includes/nav.pug
+++ b/src/views/includes/nav.pug
@@ -10,4 +10,4 @@ mixin nav(direction, hover_color)
         input(type="text" placeholder="search")
       li(class="menu-item")
         
-        button(type="Report") Report
+        button(type="Report" class="btn btn-default btn-sm") Report
