more style improvements

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -7,4 +7,5 @@ block content
 
      img(width:80% src='../static/images/pic1.jpg' class="mySlides")
      h1 Providing comfort in times of need
-     p Pet 'N Found makes it easy for you to locate your pets - just 
+     p At Pet 'N Found, we provide an extensive platform for our users to locate their pets.
+     p Just simply report a lost pet from a location, and members of the Pet 'N Found community will begin searching.
