--- a/src/views/includes/nav.pug
+++ b/src/views/includes/nav.pug
@@ -3,11 +3,8 @@ mixin nav(direction, hover_color)
   nav(class="menu")
     ul(class!=direction)
       li(class="menu-item")
+        a(class="menu-link" href="/report") Report
+      li(class="menu-item")
         a(class="menu-link" href="/map") Map
       li(class="menu-item")
         a(class="menu-link" href="/search") Search
-      li(class="menu-item")
-        input(type="text" placeholder="search")
-      li(class="menu-item")
-        
-        button(type="Report" class="btn btn-default btn-sm") Report
