added found report

--- a/src/views/foundReport.pug
+++ b/src/views/foundReport.pug
@@ -2,7 +2,7 @@ extends includes/app.pug
 
 block content
   script(src="../static/js/report.js")
-  h1 Submit a Lost Pet Report
+  h1 Submit a Found Pet Report
   form(action="/submit" class="report")
     input(type="text" class="form-control" name="location" placeholder="Location")
     input(type="text" class="form-control" name="species" placeholder="Species")
