--- a/src/views/foundReport.pug
+++ b/src/views/foundReport.pug
@@ -9,5 +9,5 @@ block content
     input(type="text" class="form-control" name="name" placeholder="Name")
     input(type="text" class="form-control" name="email" placeholder="Email")
     input(type="text" class="form-control" name="phone" placeholder="Phone")
-    input(type="button" onclick="fileSelect()") Select File
+    button(type="button" onclick="fileSelect()") Select File
     input(type="submit" class="form-control" placeholder="Submit")
