--- a/src/views/includes/header.pug
+++ b/src/views/includes/header.pug
@@ -7,4 +7,5 @@ header(class="header")
   +nav("pull-right")
 
   span(class="header-title")
-    img(src='../static/images/logoSmall.PNG' href='/')
+    a(href="/")
+      img(src='../static/images/logoSmall.PNG' href='/')
