--- a/src/views/includes/nav.pug
+++ b/src/views/includes/nav.pug
@@ -3,7 +3,7 @@ mixin nav(direction, hover_color)
   nav(class="menu")
     ul(class!=direction)
       li(class="menu-item")
-        a(class="menu-link" href="/report") Report
+        a(class="menu-link" href="/reportToggle") Report
       li(class="menu-item")
         a(class="menu-link" href="/map") Map
       li(class="menu-item")
