Add functioning login/register pages.
Added login / reigster to nav and hid password.

Password inputs on register/login pages are now hidden instead of
showing.

--- a/src/views/map.pug
+++ b/src/views/map.pug
@@ -18,6 +18,7 @@ html(lang='en')
          integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
          crossorigin="")
 
+      title=title
       // Map
       link(href='static/css/map.css' rel='stylesheet')
       script(type='text/javascript' src='static/js/map.js')
