--- a/src/views/includes/nav.pug
+++ b/src/views/includes/nav.pug
@@ -4,6 +4,10 @@ mixin nav(direction, hover_color)
   nav(class="menu")
     ul(class!=direction)
       li(class="menu-item")
+        a(class="menu-link" href="/register") Register
+      li(class="menu-item")
+        a(class="menu-link" href="/login") Login
+      li(class="menu-item")
         a(class="menu-link" href="/report") Report
       li(class="menu-item")
         a(class="menu-link" href="/map") Map
