Update code to make it compatible with path.

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,11 +1,11 @@
-extends includes/app.pug
+extends layout/app.pug
 
 block content
    center
      h1 A better way to find pets 
      p At Pet 'N Found, our mission is to help you locate your lost pets quickly, intuitively, and efficiently.
 
-     img(width:80% src='../static/images/pic1.jpg' class="mySlides")
+     img(width:80% src='/public/images/pic1.jpg' class="mySlides")
      h1 Providing comfort in times of need
      p At Pet 'N Found, we provide an extensive platform for our users to locate their pets.
      p Just simply report a lost pet from a location, and members of the Pet 'N Found community will begin searching.
