--- a/src/views/layout/nav.pug
+++ b/src/views/layout/nav.pug
@@ -1,6 +1,5 @@
-
 mixin nav(direction, hover_color)
-  link(rel="stylesheet" href="/static/css/nav.css")
+  link(rel="stylesheet" href="/public/css/nav.css")
   nav(class="menu")
     ul(class!=direction)
       li(class="menu-item")
