--- a/src/views/map/index.pug
+++ b/src/views/map/index.pug
@@ -1,5 +1,3 @@
-doctype html
-
 html(lang='en')
    head
       // JQuery
@@ -20,10 +18,10 @@ html(lang='en')
 
       title=title
       // Map
-      link(href='static/css/map.css' rel='stylesheet')
-      script(type='text/javascript' src='static/js/map.js')
+      link(href='/public/css/map.css' rel='stylesheet')
+      script(type='text/javascript' src='/public/js/map.js')
          
       // Socket
-      script(type='text/javascript' src='static/js/socket.js')
+      script(type='text/javascript' src='/public/js/socket.js')
    body
       div(id='petmap')
