--- a/src/views/layout/head.pug
+++ b/src/views/layout/head.pug
@@ -5,11 +5,11 @@ head
   meta(name="description" content="")
   meta(name="author" content="")
 
-  script(src="/static/js/app.js")
+  script(src="/public/js/app.js")
 
-  link(rel="stylesheet" href="/static/css/app.css")
-  link(rel="stylesheet" href="/static/css/bootstrap.min.css")
-  link(rel="stylesheet" href="/static/css/normalize.css")
+  link(rel="stylesheet" href="/public/css/app.css")
+  link(rel="stylesheet" href="/public/css/bootstrap.min.css")
+  link(rel="stylesheet" href="/public/css/normalize.css")
   link(rel="stylesheet" 
     href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700")
 
