add sidebar navigation to map page

--- a/src/views/layout/nav.pug
+++ b/src/views/layout/nav.pug
@@ -1,7 +1,7 @@
 mixin nav(direction, hover_color)
   link(rel="stylesheet" href="/public/css/nav.css")
   nav(class="menu")
-    ul(class!=direction)
+    ul(id='navlist' class!=direction)
       li(class="menu-item")
         a(class="menu-link" href="/register") Register
       li(class="menu-item")
