--- a/public/css/map.css
+++ b/public/css/map.css
@@ -2,8 +2,9 @@ body {
    margin: 0;
    padding: 0;
 }
+
 #petmap {
    margin: 0;
    padding: 0;
-   height: 600px;
+   height: 600px; /*Default height overrided by map.js*/
 }
