Working on sass integration.

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -4,7 +4,7 @@
   padding-top: 25px;
   margin-bottom: 30px;
   border-bottom: 1px solid #bbbbbb;
-  background-color: #17b563ff;
+  background-color: #17b563;
 }
 
 .header nav {
