Finish sass integration, still need to fix styles though.

--- a/public/css/report.css
+++ b/public/css/report.css
@@ -1,3 +1,4 @@
 .report {
   width: 20%;
 }
+/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInJlcG9ydC5jc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7RUFDRSxXQUFXO0NBQ1oiLCJmaWxlIjoicmVwb3J0LmNzcyIsInNvdXJjZXNDb250ZW50IjpbIi5yZXBvcnQge1xuICB3aWR0aDogMjAlO1xufVxuIl19 */
