Finish creating the new theme.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,9 @@
 @import "themes/_default.scss";
 
-@import "components/_navigation.scss";
+@import "components/_navbar.scss";
 @import "components/_tile.scss";
 
 @import "layout/_footer.scss";
-@import "layout/_header.scss";
 
 @import "pages/_authorize.scss";
 @import "pages/_index.scss";
