--- a/src/views/layout/app.pug
+++ b/src/views/layout/app.pug
@@ -1,13 +1,9 @@
-doctype html
-
 html(lang="en")
   include head.pug
 
   body
-    div(class="container")
+    div(class="fluid-container")
       include header.pug
 
       div(class="content")
         block content
-
-      include footer.pug
