--- a/src/views/layout/header.pug
+++ b/src/views/layout/header.pug
@@ -1,8 +1,4 @@
 include nav.pug
 
 header(class="header")
-  +nav("pull-right")
-
-  span(class="header-title")
-    a(href="/")
-      img(src='/public/images/logoSmall.PNG' href='/')
+  +nav()
