--- a/src/scss/pages/_authorize.scss
+++ b/src/scss/pages/_authorize.scss
@@ -4,7 +4,10 @@
   display: block; }
 
 .jumbotron {
-  background-color: $wintergreen-dream !important; }
+  background-color: $primary !important; 
+  border-radius: 0px !important;
+  margin: 0px !important;
+}
 
 .vertical-center {
     min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
@@ -15,10 +18,10 @@
   }
 
 .panel-login {
-  border-color: $smoky-black;
-  -webkit-box-shadow: 0px 2px 3px 0px rgba($smoky-black, .4);
-  -moz-box-shadow: 0px 2px 3px 0px rgba($smoky-black, .4);
-  box-shadow: 0px 2px 3px 0px rgba($smoky-black, .4) !important;
+  border-color: $tertiary;
+  -webkit-box-shadow: 0px 2px 3px 0px rgba($tertiary, .4);
+  -moz-box-shadow: 0px 2px 3px 0px rgba($tertiary, .4);
+  box-shadow: 0px 2px 3px 0px rgba($tertiary, .4) !important;
 
   & .panel-heading {
     color: #00415d;
@@ -59,19 +62,11 @@
 
   input[type="text"], input[type="email"], input[type="password"] {
     height: 45px;
-    border: 1px solid #ddd;
+    border: 1px solid rgba($tertiary, 0.25);
     font-size: 16px;
     -webkit-transition: all 0.1s linear;
     -moz-transition: all 0.1s linear;
     transition: all 0.1s linear;
-  }
-
-  input:hover, input:focus {
-    outline:none;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-    border-color: #ccc;
   }
 }
 
@@ -80,8 +75,7 @@
   color: #888;
 
   &:hover, &:focus {
-    text-decoration: underline;
-    color: #666;
+    color: darken(#888, 15%);
   }
 }
 
@@ -90,28 +84,30 @@
   font-size: 14px;
   height: auto;
   font-weight: normal;
-  color: white;
   padding: 14px 0;
+  color: black !important;
   text-transform: uppercase;
+  border-radius: 4px !important;
+  transition: all 0.1s linear;
 
   &-login {
-    background-color: $login-button-color;
-    border-color: $login-button-color;
+    color: $login-button-color;
+    background-color: $login-button-color !important;
+    border-color: $login-button-color !important;
   
     &:hover, &:focus {
-      background-color: mix(black, $login-button-color, 15);
-      border-color: mix(black, $login-button-color, 15);
+      background-color: darken($login-button-color, 5%) !important;
+      border-color: darken($login-button-color, 5%) !important;
     }
   }
 
   &-register {
-    background-color: $register-button-color;
-    border-color: $register-button-color;
+    background-color: $register-button-color !important;
+    border-color: $register-button-color !important;
 
     &:hover, &:focus {
-      color: white;
-      background-color: mix(black, $register-button-color, 15);
-      border-color: mix(black, $register-button-color, 15);
+      background-color: darken($register-button-color, 5%) !important;
+      border-color: darken($register-button-color, 5%) !important;
     }
   }
 }
