--- a/src/views/layout/head.pug
+++ b/src/views/layout/head.pug
@@ -7,9 +7,10 @@ head
 
   script(src="/public/js/app.js")
 
+  link(href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO", crossorigin="anonymous")
   link(rel="stylesheet" href="/public/css/main.css")
-  link(rel="stylesheet" href="/public/css/normalize.css") 
   link(rel="stylesheet" 
     href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700")
+  link(rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons")
 
   title=title
