Add sidebar to map.
Adds a sidebar to the map that can be collapsed.
Next thing to be added is displaying clicked in reports in the sidebar.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,13 @@
 @import "themes/_default.scss";
 
-@import "components/_navbar.scss";
 @import "components/_tile.scss";
+@import "components/_navbar.scss";
+@import "components/_leaflet-sidebar.scss";
 
 @import "layout/_footer.scss";
 
-@import "pages/_authorize.scss";
-@import "pages/_index.scss";
 @import "pages/_map.scss";
+@import "pages/_index.scss";
+@import "pages/_authorize.scss";
 
 @import "vendor/_bootstrap.scss";
