--- a/src/views/map/index.pug
+++ b/src/views/map/index.pug
@@ -18,12 +18,43 @@ html(lang='en')
          integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
          crossorigin="")
 
-      title=title
-      
+      script(type='text/javascript' src='/public/js/sidebar.js')
       script(type='text/javascript' src='/public/js/map.js')
          
       // Socket
       script(type='text/javascript' src='/public/js/socket.js')
 
    body
-      div(id='petmap')
+      div(id="sidebar" class="sidebar collapsed")
+         div(class="sidebar-tabs")
+            ul(role="tablist")
+               li
+                  a(href="#home" role="tab" class="material-icons") dehaze
+               li
+                  a(href="/" role="tab" class="material-icons") home
+
+               li(class)
+                  a(href="/report" role="tab" class="material-icons") report
+
+               li(class="disabled")
+                  a(href="" role="tab" class="material-icons") person
+
+            ul(role="tablist")
+               li
+                  a(href="#settings" role="tab" class="material-icons") settings
+
+         div(class="sidebar-content")
+            div(class="sidebar-pane" id="#home")
+               h1(class="sidebar-header")
+                  p Pet 'N Found
+                  span(class="sidebar-close")
+                     li(class="material-icons") arrow_left
+
+               div(id="report")
+                  img(class="report-image")
+                  h2(class="report-title")
+                  h3(class="report-distance")
+                  
+               p(class="report-description")
+
+      div(id='petmap' class='sidebar-map')
