When a marker is clicked, display it on the sidebar.

--- a/src/views/map/index.pug
+++ b/src/views/map/index.pug
@@ -51,10 +51,10 @@ html(lang='en')
                      li(class="material-icons") arrow_left
 
                div(id="report")
-                  img(class="report-image")
-                  h2(class="report-title")
-                  h3(class="report-distance")
+                  img(id="report-image")
+                  h2(id="report-title")
+                  h3(id="report-distance")
                   
-               p(class="report-description")
+                  p(id="report-description")
 
       div(id='petmap' class='sidebar-map')
