Edit report inputs and display link to user on report sidebar.

--- a/src/views/map/index.pug
+++ b/src/views/map/index.pug
@@ -54,7 +54,8 @@ html(lang='en')
                   img(id="report-image")
                   h2(id="report-title")
                   h3(id="report-distance")
-                  
+                  a(id="report-author" href="/")
+
                   p(id="report-description")
 
       div(id='petmap' class='sidebar-map')
