--- a/src/views/report/index.pug
+++ b/src/views/report/index.pug
@@ -5,11 +5,7 @@ block content
   link(rel="stylesheet", src="/public/css/report.css") 
 
   h1 Submit a Found Pet Report
-  form(action="/submit" class="report border rounded")
-    div(class="form-group")
-      label(for="findername") Finder's Name
-      input(type="text" class="form-control" name="findername" placeholder="Enter your name")
-
+  form(action="/report/submit" class="report border rounded")
     div(class="form-group")
       label(for="location") Location where the pet was found
       input(type="text" class="form-control" name="location" placeholder="Enter location")
@@ -27,15 +23,7 @@ block content
       textarea(class="form-control" name="description" rows="3")
 
     div(class="form-group")
-      label(for="email") Email address
-      input(type="text" class="form-control" name="email" placeholder="Enter email")
-
-    div(class="form-group")
-      label(for="phone") Phone number
-      input(type="text" class="form-control" name="phone" placeholder="Enter phone number")
-
-    div(class="form-group")
-      label(class="custom-file") File Input
+      label(class="custom-file") Image
       input(type="file" name="file" class="form-control-file")
 
     button(type="submit" class="btn btn-primary") Submit
