Remove uncessary theme imports and rename tile to be more specific

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,6 @@
 @import "themes/_default.scss";
 
-@import "components/_tile.scss";
+@import "components/_report_tile.scss";
 @import "components/_navbar.scss";
 @import "components/_leaflet-sidebar.scss";
 
