Update user page.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,13 +1,14 @@
 @import "themes/_default.scss";
 
-@import "components/_report_tile.scss";
-@import "components/_navbar.scss";
 @import "components/_leaflet-sidebar.scss";
+@import "components/_navbar.scss";
+@import "components/_report_tile.scss";
 
 @import "layout/_footer.scss";
 
-@import "pages/_map.scss";
-@import "pages/_index.scss";
 @import "pages/_authorize.scss";
+@import "pages/_index.scss";
+@import "pages/_map.scss";
+@import "pages/_user.scss";
 
 @import "vendor/_bootstrap.scss";
