--- a/src/scss/components/_report_tile.scss
+++ b/src/scss/components/_report_tile.scss
@@ -1,9 +1,79 @@
 $tile-width: 200px;
 $tile-height: 300px;
 
-.tile {
-  width: 200px;
-  height: 300px;
+.report-tile {
+  width: 5rem;
+  height: auto;
 
+  display: inline-block;
 
+  margin-right: 2rem;
+  border-radius: 4px;
+  background: $primary;
+
+  & .icons {
+    float: right;
+    list-style: none;
+
+    margin-top: 0.1rem;
+  }
+
+  & .icon {
+    margin-right: 0.1rem;
+
+    color: $secondary;
+    text-shadow: 0px 4px 4px rgba($tertiary, 0.25);
+
+    &:hover {
+      text-decoration: none;
+
+      color: darken($secondary, 5%);
+      text-shadow: 0px 4px 4px $tertiary;
+    }
+  }
+
+  & .image {
+    width: 120px;
+    height: 120px;
+
+   
+    object-fit: cover;
+    object-position: 50% 50%;
+    border-radius: 60px;
+    box-shadow: 0px 4px 4px rgba($tertiary, 0.25);
+  }
+
+  & .report-info {
+    margin-top: 0.5rem;
+
+    & .report-title {
+      margin-bottom: 0.5rem;
+
+      font-size: 0.77rem;
+      font-style: normal;
+      font-weight: normal;
+      line-height: normal;
+      text-align: center;
+
+      color: $secondary;
+      text-shadow: 0px 4px 4px rgba($tertiary, 0.25);
+    }
+
+    & .info {
+      margin-bottom: 0.1rem;
+
+      font-size: 0.5rem;
+      font-style: normal;
+      font-weight: normal;
+      line-height: normal;
+      text-align: center;
+
+      color: $secondary;
+      text-shadow: 0px 4px 4px rgba($tertiary, 0.25);
+      
+      &:last-child {
+        padding-bottom: 0.1rem;
+      }
+    }
+  }
 }
